Finalizacion de funciones del Modulo Tecnico